2006-09-25  Juho Vähä-Herttua
   * Change header font to use same size with other text

2006-09-22  Juho Vähä-Herttua
   * Add support for Windows-1255 (Hebrew) codepage
   * Add better support for right-to-left languages
   * Show selected profile in main screen (idea from BBirc)
   * Fix a crash bug related to showing the profile

2006-09-05  Juho Vähä-Herttua
   * Change maximum length of username to be 25, not 8

2006-01-21  Juho Vähä-Herttua
   * Make hilight checking case insensitive
   * Add ban to names nick option list
   * Fix names nick option bug introduced earlier
   * Add support for /mode and /join commands

2006-01-20  Juho Vähä-Herttua
   * Move some advanced settings to interface settings
   * Make font in TextArea.java configurable
   * Make font size in windows configurable
   * Add selection for font size to interface settings
   * Make whois more verbose also from names list

2006-01-19  Juho Vähä-Herttua
   * Clean up the UTF-8 code more and make it work better
   * Fix the mode parser and show chanmodes in header
   * Add timeout exceptions to all connections
   * Fix bug in scrolling when buffer is full
   * Make new UTF-8 option entrys smaller to fit the screen

2006-01-17  Juho Vähä-Herttua
   * Fix invites in both ways
   * Fix problems if own nick is changed
   * Show error message when connection is closed

2006-01-11  Juho Vähä-Herttua
   * Clean up the UTF-8 code a little bit

Version 0.95
------------

2006-01-01  Juho Vähä-Herttua
   * Fix bug when same nick whois requested multiple times
   * Fix potential crash in /part command and /kick command
   * Close window after /part message (earlier left open)
   * Fix index out of bounds in UIHandler
   * Fix crash in UIHandler if parted or kicked in Status win
   * Add new UTF-8 options to advanced settings

2005-12-31  Juho Vähä-Herttua
   * Add support for native UTF-8 encoding/decoding
   * Add support for UTF-8 decode with fallback

2005-12-04  Juho Vähä-Herttua